# CmakeProject

./: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  License.txt  Makefile  Tutorial  TutorialConfig.h  cmake_install.cmake  install_manifest.txt
MathFunctions/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  libMathFunctions.dylib
MathFunctions/include/: MathFunctions.hpp
MathFunctions/src/: mysqrt.cpp
Testing/Temporary/: CTestCostData.txt
main/: CMakeLists.txt  License.txt  SquareRoot.cpp  TutorialConfig.h  TutorialConfig.h.in
